# chatterbox

./: .gitignore  LICENSE  README.md  app.py  benchmarks.md  example_for_mac.py  example_tts.py  example_tts_turbo.py  gradio_tts_app.py  gradio_tts_turbo_app.py  gradio_vc_app.py  multilingual_app.py  pyproject.toml
.github/workflows/: install_check.yml
examples/: README.md  build_tensorrt_engines.py  export_artifacts.py  manual_onnx_pipeline.py  ort_voice_conversion.py  tensorrt_voice_conversion.py
scripts/: convert_checkpoint.py
src/chatterbox/: __init__.py  audio.py  device.py  mtl_tts.py  timing.py  tts.py  tts_turbo.py  types.py  vc.py
src/chatterbox/audio/: __init__.py  constants.py  fbank.py  io.py  mel.py  resample.py
src/chatterbox/models/: __init__.py  checkpoint.py  pipeline.py  token_utils.py
src/chatterbox/models/conditioning/: __init__.py  reference.py
src/chatterbox/models/melgen/: __init__.py  config.py  flow.py  masks.py  mel.py  model.py
src/chatterbox/models/s3gen/: __init__.py  checkpoint_conversion.py  conditioning.py  configs.py  const.py  decoder.py  f0_predictor.py  flow.py  flow_matching.py  flow_solver.py  hifigan.py  mel.py  pipeline.py  resnet.py  s3gen.py  source.py  stft.py  token_encoder.py  transformer_block.py  vocoder.py  xvector.py
src/chatterbox/models/s3gen/matcha/: decoder.py  text_encoder.py  transformer.py
src/chatterbox/models/s3gen/transformer/: attention.py  embedding.py  encoder_layer.py  positionwise_feed_forward.py  subsampling.py  upsample_encoder.py
src/chatterbox/models/s3gen/utils/: class_utils.py  intmeanflow.py  mask.py  mel.py
src/chatterbox/models/s3tokenizer/: __init__.py  architecture.py  exportable.py  features.py  model.py  s3tokenizer.py
src/chatterbox/models/speaker/: __init__.py  campplus.py  exportable.py  features.py
src/chatterbox/models/t3/: llama_configs.py  t3.py
src/chatterbox/models/t3/inference/: t3_hf_backend.py
src/chatterbox/models/t3/modules/: perceiver.py
src/chatterbox/models/tokenizer/: __init__.py  s3.py
src/chatterbox/models/tokenizers/: tokenizer.py
src/chatterbox/models/vocoder/: __init__.py  f0.py  postprocess.py
src/chatterbox/models/voice_encoder/: voice_encoder.py
src/chatterbox/onnx_export/: README.md  __init__.py  artifacts.py  buckets.py  cli.py  config.py  constants.py  dynamic_axes.py  dynamic_shapes.py  errors.py  export_session.py  graph_spec.py  model_loading.py  names.py  precision.py  validation.py
src/chatterbox/onnx_export/graphs/: __init__.py  conditional_decoder.py  flow_decoder.py  reference_mel.py  s3_tokenizer.py  s3_tokenizer_log_mel.py  speaker_encoder.py  token_to_mu.py  vocoder.py
src/chatterbox/onnx_export/modules/: __init__.py  conditional_decoder.py  flow_decoder.py  reference_mel.py  s3_tokenizer.py  speaker_encoder.py  token_to_mu.py  vocoder.py
src/chatterbox/onnx_export/quantization/: __init__.py  fp16.py  int8.py  q4.py
src/chatterbox/onnx_export/runtime/: __init__.py  preprocess.py  runner.py  s3gen.py  sessions.py  solver.py  tensors.py  vc.py
src/chatterbox/onnx_export/validation/: __init__.py  metrics.py  runner.py  tolerances.py
src/chatterbox/tensorrt/: __init__.py  api.py  builder.py  cli.py  config.py  cuda.py  engine.py  errors.py  manifest.py  memory.py  runtime_api.py  shapes.py  types.py
src/chatterbox/vc/: __init__.py  conditioning.py  errors.py  postprocess.py  preprocess.py  service.py  types.py
src/chatterbox/vc/backends/: __init__.py  onnx_backend.py  tensorrt_backend.py  torch_backend.py
tests/: test_onnx_graph_parity.py
tests/models/: test_s3gen_conditioning.py  test_s3gen_pipeline.py  test_s3gen_vocoder.py  test_s3tokenizer_inputs.py
tests/models/s3gen/: test_decoder.py  test_resnet.py
