[project]
name = "chatterbox-tts"
version = "0.1.7"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "conformer>=0.3",
    "diffusers>=0.38",
    "flowhigh",
    "huggingface-hub>=1.20",
    "librosa>=0.11",
    "numpy>=1.24",
    "omegaconf>=2.3",
    "peft>=0.19",
    "s3tokenizer>=0.3",
    "safetensors>=0.8",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[project.optional-dependencies]
cpu = [
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchcodec==0.14.0",
]

cuda = [
    "nvidia-modelopt>=0.44.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "torch==2.11.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "torch-tensorrt==2.11.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "torchaudio==2.11.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "torchcodec==0.14.0; sys_platform == 'linux' or sys_platform == 'win32'",
]

rocm = [
    "torch==2.11.0; sys_platform == 'linux'",
    "torchaudio==2.11.0; sys_platform == 'linux'",
    "torchcodec==0.14.0; sys_platform == 'linux'",
    "pytorch-triton-rocm; sys_platform == 'linux'",
    "triton-rocm; sys_platform == 'linux'",
]

ui = [
    "gradio==6.8.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.7",
    "black>=26.5.1",
    "isort>=8.0.1",
    "ruff>=0.15.17",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "rocm" },
    ],
]

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu130", extra = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", extra = "cpu" },
]

torchaudio = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu130", extra = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", extra = "cpu" },
]

torchcodec = [
    { index = "pytorch-cpu", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", extra = "cpu" },
]

pytorch-triton-rocm = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
]

triton-rocm = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
]

flowhigh = { git = "https://github.com/perennialtech/flowhigh" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
