[project]
name = "chatterbox"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"},
    {name = "perennial", email = "mail@perennialte.ch"}

]
dependencies = [
    "conformer>=0.3",
    "diffusers>=0.39",
    "huggingface-hub>=1.24",
    "librosa>=0.11",
    "numpy>=2.4",
    "omegaconf>=2.3",
    "safetensors>=0.8",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[project.optional-dependencies]
cpu = [
    "torch>=2.13",
    "torchaudio>=2.11",
    "torchcodec>=0.15",
]

cuda = [
    "torch>=2.13; sys_platform == \"linux\" or sys_platform == \"win32\"",
    "torchaudio>=2.11; sys_platform == \"linux\" or sys_platform == \"win32\"",
    "torchcodec>=0.15; sys_platform == \"linux\" or sys_platform == \"win32\"",
]

rocm = [
    "pytorch-triton-rocm>=3.5; sys_platform == \"linux\"",
    "torch>=2.13; sys_platform == \"linux\"",
    "torchaudio>=2.11; sys_platform == \"linux\"",
    "torchcodec>=0.15; sys_platform == \"linux\"",
    "triton-rocm>=3.7; sys_platform == \"linux\"",
]

ui = [
    "gradio>=6.20",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39",
    "black>=26.5",
    "isort>=8.0",
    "pytest>=9.1",
    "ruff>=0.15",
    "torchvision>=0.28",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "rocm" },
    ],
]

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu130", extra = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", extra = "cpu" },
]

torchaudio = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu130", extra = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", extra = "cpu" },
]

torchcodec = [
    { index = "pytorch-cpu", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", extra = "cpu" },
]

pytorch-triton-rocm = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
]

triton-rocm = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
]

[build-system]
requires = ["setuptools>=83.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
